<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainEventFragment">

    <ImageView
        android:id="@+id/btnBackk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="351dp"
        android:rotation="180"
        android:src="@drawable/ic_baseline_arrow_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titleMainEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/cocogooseclassicmediumtrial"
        android:text="@string/topicEvent"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/main"
        android:layout_marginStart="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMainEvent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/txtEd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtHel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:layout_marginTop="35dp"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtRel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/religion"
                        android:layout_marginTop="35dp"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtNat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nature"
                        android:layout_marginTop="35dp"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/image_removebg_preview"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/image_removebg_preview"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="60dp"
                        android:src="@drawable/image_removebg_preview"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="50dp"
                        android:src="@drawable/image_removebg_preview"
                        android:contentDescription="@string/todo" />


                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <!--            <TextView-->
        <!--                android:id="@+id/txtEd"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="Образование"-->
        <!--                android:textAllCaps="true"-->
        <!--                android:textColor="#FFFFFF"-->
        <!--                android:textSize="30sp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/txtHel"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="Здоровье"-->
        <!--                android:layout_marginTop="35dp"-->
        <!--                android:textAllCaps="true"-->
        <!--                android:textColor="#FFFFFF"-->
        <!--                android:textSize="30sp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/txtRel"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="Религия"-->
        <!--                android:layout_marginTop="35dp"-->
        <!--                android:textAllCaps="true"-->
        <!--                android:textColor="#FFFFFF"-->
        <!--                android:textSize="30sp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/txtNat"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="Природа"-->
        <!--                android:layout_marginTop="35dp"-->
        <!--                android:textAllCaps="true"-->
        <!--                android:textColor="#FFFFFF"-->
        <!--                android:textSize="30sp" />-->

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>